--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Promise based library for accessing the UW Open Data API",
   "main": "lib/uwapi.js",
   "scripts": {
-    "test": "test -z $uwApiToken && echo \"uwApiToken environment variable must be set to a valid token to run tests\" || mocha"
+    "build": "webpack",
+    "test": "mocha"
   },
   "keywords": [
     "UW",
@@ -22,6 +23,10 @@
     "q": "^1.0.1"
   },
   "devDependencies": {
-    "mocha": "^1.21.5"
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "mocha": "^1.21.5",
+    "webpack": "^1.14.0"
   }
 }
